Add user and hypertension controllers, routes, and update User model with new fields

--- a/ml/train_classifier_and_see_features (3).ipynb
+++ b/ml/train_classifier_and_see_features (3).ipynb
@@ -42,8 +42,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
             "0            6      148             72             35        0  33.6   \n",
@@ -178,9 +178,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(preprocessor)"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -188,11 +186,10 @@
         "id": "UqXU4H-wvVQ8",
         "outputId": "816abf16-0339-4294-973d-f61ce88154e6"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "ColumnTransformer(transformers=[('num',\n",
             "                                 Pipeline(steps=[('imputer',\n",
@@ -209,6 +206,9 @@
             "                                 Index([], dtype='object'))])\n"
           ]
         }
+      ],
+      "source": [
+        "print(preprocessor)"
       ]
     },
     {
@@ -223,8 +223,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "SelectKBest(k=20)\n",
             "Selected features:\n",
@@ -234,8 +234,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/sklearn/feature_selection/_univariate_selection.py:783: UserWarning: k=20 is greater than n_features=8. All the features will be returned.\n",
             "  warnings.warn(\n"
@@ -274,8 +274,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/sklearn/feature_selection/_univariate_selection.py:783: UserWarning: k=20 is greater than n_features=8. All the features will be returned.\n",
             "  warnings.warn(\n",
@@ -284,8 +284,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: Logistic Regression\n",
             "Accuracy: 0.7337662337662337\n",
@@ -314,16 +314,16 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/sklearn/feature_selection/_univariate_selection.py:783: UserWarning: k=20 is greater than n_features=8. All the features will be returned.\n",
             "  warnings.warn(\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: Gradient Boosting\n",
             "Accuracy: 0.7532467532467533\n",
@@ -364,8 +364,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/sklearn/feature_selection/_univariate_selection.py:783: UserWarning: k=20 is greater than n_features=8. All the features will be returned.\n",
             "  warnings.warn(\n",
@@ -413,16 +413,16 @@
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
-        "id": "DNxXbaZ5chAs",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "DNxXbaZ5chAs",
         "outputId": "b82e9c5f-4d16-4003-9de0-2f230fd5864c"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Best Model: Random Forest with Accuracy: 0.7597402597402597\n"
           ]
@@ -442,24 +442,24 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "btgmFCsMcpWa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "btgmFCsMcpWa",
         "outputId": "83f62362-af75-416d-e15c-69474e9cf3e0"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/sklearn/feature_selection/_univariate_selection.py:783: UserWarning: k=10 is greater than n_features=8. All the features will be returned.\n",
             "  warnings.warn(\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Best Params: {'classifier__max_depth': 10, 'classifier__n_estimators': 100, 'feature_select__k': 10}\n",
             "Best CV Score: 0.7768892443022791\n",
@@ -519,22 +519,22 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "id": "DSTSo9lDcuoJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "DSTSo9lDcuoJ",
         "outputId": "d59f225e-3ca3-449d-faaa-3a2938a6eb36"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['/content/best_pipeline.joblib']"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 12
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -552,7 +552,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.13.0"
     }
   },
   "nbformat": 4,
